--- a/evaluator.html
+++ b/evaluator.html
@@ -16,6 +16,7 @@
 
 	<!-- Internal -->
 	<link rel="stylesheet" href="/public/css/evaluator.css">
+	<link rel="stylesheet" href="/public/css/chat.css">
 	<script src="/public/js/evaluator.js" charset="utf-8"></script>
 	<title>Evaluator</title>
 
@@ -25,20 +26,20 @@
 	<!--NAVBAR-->
 	<nav class="navbar navbar-expand-sm navbar-dark bg-primary">
 		<button id="collapse-button" class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
+			<div class="navbar-toggler-icon"></div>
 			<div id="dot-space"></div>
 		</button>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav">
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+					<a class="nav-link dropdown-toggle" id="helpDropdownButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Richieste d'aiuto
 					</a>
 					<div class="dropdown-menu" id="helpDropdown" aria-labelledby="navbarDropdown">
 						<!--Lista degli utenti in attesa di aiuto-->
 					</div>
 				</li>
-				<li class="nav-item dropdown">
+				<li class="nav-item dropdown ">
 					<a class="nav-link dropdown-toggle" id="playerDropdownButton" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 						Giocatori
 					</a>
@@ -54,12 +55,12 @@
 						<!--Lista degli utenti con messaggi non letti-->
 					</div>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item close-on-click">
 					<a class="nav-link" id="classification-button">
 						Classifica
 					</a>
 				</li>
-				<li class="nav-item">
+				<li class="nav-item close-on-click">
 					<a class="nav-link" onclick="openDownloads()">
 						Downloads
 					</a>
@@ -82,7 +83,7 @@
 	</div>
 	<!--CHAT-->
 	<div class="chat-popup" id="chat">
-		<form autocomplete="off" onsubmit="sendMsg()" class="form-container">
+		<form autocomplete="off" class="form-container">
 			<div class="container">
 				<div class="col-sm-8">
 					<div class="chatbody">
@@ -100,8 +101,8 @@
 							</div>
 							<div class="panel-footer">
 								<div class="input-group">
-									<input id="new_msg_text" type="text" autocomplete="off" class="form-control input-sm chat_input" placeholder="Write your message here..." />
-									<a class="btn btn-info btn-sm" onclick="sendMsg()">
+									<input id="new_msg_text" type="text" autocomplete="off" class="form-control input-sm chat_input" placeholder="Scrivi il tuo messaggio..." />
+									<a id="send-msg" class="btn btn-info btn-sm" onclick="sendMsg()">
 										<span class="glyphicon glyphicon-send"></span> Send
 									</a>
 								</div>
