adjustate  cose grafiche al termine della storia

--- a/player.html
+++ b/player.html
@@ -269,8 +269,11 @@
 			$('.testo-attivita').empty();
 			$('#nome-missione').empty();
 			$('#nome-attivita').empty();
+			$('.div-grande-video').empty();
+			$('.div-grande-img').empty();
 			$('.testo-attivita').append('<p id="final-text">Grazie per aver giocato!</p>'); 
 			$('#bottone-fine').remove();
+
 		});
 		function setCurrentQuest() {
             let date = new Date();
