--- a/author.html
+++ b/author.html
@@ -162,7 +162,7 @@
                             <label for="input-style-number">Stile widget di input di numero:</label>
                             <select class="custom-select input-style-number" id="input-style-number">
                                 <option value="" selected>Nessuno</option>
-                                <option value="LCD">Display LCD</option>
+                                <option value="LCD">Display LCD (max 4 cifre)</option>
                             </select>
                         </div>
                         
