--- a/player.html
+++ b/player.html
@@ -20,7 +20,6 @@
 	<script type="text/javascript">
 		/*TODO:
 			Update di correzioni => score 
-			Notifica di messaggi in interval aggiornamento
 			Notifica e visualizzazione di HELP
 		*/ 
 		var player_id = null;
@@ -49,7 +48,10 @@
                 }
             });
         });
+		setInterval(function () {
+			check4newMex();
 
+		},1000);
 		function setPlayer(data) {
 			$.ajax({
 				url: '/players/create_player',
@@ -283,23 +285,27 @@
 		//Funzione per la notifica della chat
 		function check4newMex() {
 			$.ajax({
-				url: 'players/get_chat/' + player_id,
-				success: function(chat) {
-					let count = 0;
-					chat.forEach((chatLog) => {
-						if (chatLog.seen == false && chatLog.auth == 'Valutatore') {
-							count++;
+				url: 'players/get_chat/player' + player_id,
+				success: function (chat) {
+					chat = JSON.parse(chat);
+					let count=0;
+					console.log(chat.length);
+					if (chat.length > 0) {
+						chat.forEach((chatLog) => {
+							if (chatLog.seen == false && chatLog.auth == 'Valutatore') {
+								count++;
+							}
+						});
+						if (count > 0 && !($('#chatDot').length)) {
+							$('#chat-button').append('<div id= "chatDot" class= "dot"></div>');
+							blinkNotify('#chatDot');
 						}
-					});
-					if (count > 0) {
-						$('#chat-button').append(
-							'<div class= "dot"></div>'
-                    );} 
+					}
                 }
 
 			}); 
 	
-		});
+		}
 		//Evento per la fine della storia
 		$(document).on('click', '#bottone-fine', function () {
 			$('.testo-attivita').empty();
@@ -377,7 +383,7 @@
 			console.log(input_type);
 			switch (input_type) {
 				case 'photo':
-					if ($('#input-immagine')[0].files.lenght == 0)
+					if ($('#input-immagine')[0].files.length == 0)
 						return false;
 					else return true;
                 case 'none':
@@ -818,14 +824,13 @@
 			min-height: 2vh;
 			margin: .2vh;
 			border-radius: 2vh;
-			color: white;
 			font-size: 1vh;
 			vertical-align: middle;
 			text-align: center;
 			padding: 2.5px;
 			float: left;
 			clear: right;
-			background: radial-gradient(white 10%, transparent) !important;
+			background: radial-gradient(rebeccapurple 10%, transparent) !important;
         }
 	</style>
 </head>
