--- a/author.html
+++ b/author.html
@@ -155,6 +155,7 @@
                             <label for="input-style-text">Stile widget di input di testo:</label>
                             <select class="custom-select" id="input-style-text">
                                 <option value="" selected>Nessuno</option>
+                                <option value="scroll">Pergamena</option>
                             </select>
                         </div>
                         
