Rimangono i collegamenti tra i nodi se si cambia l'input

--- a/author.html
+++ b/author.html
@@ -315,7 +315,7 @@
             <div>
                 <video controls>
                   <source src="">
-                    Your browser does not support HTML5 video.
+                  Il tuo browser non support i video HTML5
                 </video>
                 
                 <label class="file-upload-label btn btn-success btn-sm">
