--- a/author.html
+++ b/author.html
@@ -171,6 +171,7 @@
                             <label for="input-style-photo">Stile widget di input di foto:</label>
                             <select class="custom-select input-style-photo" id="input-style-photo">
                                 <option value="" selected>Nessuno</option>
+								<option value="scanner">Scanner</option>
                             </select>
                         </div>
                     </div>
