--- a/author.html
+++ b/author.html
@@ -260,7 +260,7 @@
     <template id="template-mission">
         <div class="p-1 mission-div m-1">
             <div class="btn-group float-right" role="group">
-                <input class="mission-col" type="color" value="#563d7c" id="example-color-input">
+                <input class="mission-col" type="color" value="#563d7c" id="example-color-input" title="Colore">
                 <button class="mission-button mission-copy" title="Copia"><img class="mission-icon" src="/public/images/icons/copy.svg"></button>
                 <button class="mission-button mission-del" title="Elimina"><img class="mission-icon" src="/public/images/icons/cross.png"></button>
             </div>
